[project]
name = "exploring-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.3",
    "langsmith>=0.7.22",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
]
